--- a/public/index.html
+++ b/public/index.html
@@ -1,14 +1,44 @@
 <!DOCTYPE html>
 <html>
-  <head lang="en">
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Rockpaperscissor</title>
-    <link rel="shortcut icon" href="/favicon.ico">
-    <link rel="stylesheet" href="/screen.css">
-  </head>
-  <body>
-    <h1 class='hello-world'></h1>
-    <script src="/main.js" charset="utf-8"></script>
-  </body>
+
+<head>
+  <meta charset="utf-8">
+  <title>Rock Paper Scissors Game</title>
+  <link rel="stylesheet" href="screen.css">
+</head>
+
+<body>
+  <header>
+    <h1>Rock Paper Scissors</h1>
+  </header>
+
+  <div class="score-board">
+    <div id="user_label" class="badge">User</div>
+    <div id="computer_label" class="badge">Comp</div>
+    <span id="user_score">0</span>:<span id="computer_score">0</span>
+
+  </div>
+
+  <div class="result">
+    <p>Paper covers rock. You win!</p>
+  </div>
+
+  <div class="choices">
+    <div class="choice" id="p">
+      <img src="./images/paper.png" alt="Paper" style="width:75px;height:75px;"></img>
+    </div>
+    <div class="choice" id="r">
+      <img src="./images/rock.png" alt="rock" style="width:100px;height:100px;"></img>
+    </div>
+    <div class="choice" id="s">
+      <img src="./images/scissor.png" alt="paper" style="width:75px;height:75px;"></img>
+    </div>
+  </div>
+
+  <p id="action_message">Make your move</p>
+  <script src="main.js" type="text/javascript">
+
+  </script>
+</body>
+
 </html>
